# voice_map

./: .gitignore  CLAUDE.md  docker-compose.yml
.claude/agents/: ai-knowledge.md  backend.md  frontend.md  qa.md  tech-lead.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_conversations_and_messages_tables.py  b3c4d5e6f7a8_add_documents_table_with_pgvector_embedding.py  d88744686508_create_users_table.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  chat.py  conversations.py  documents.py  voice.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  conversation.py  document.py  user.py
backend/app/prompts/: summarize_v1.py  system_chat_v1.py
backend/app/schemas/: auth.py  conversation.py  document.py
backend/app/services/: ai_service.py  auth_service.py  conversation_service.py  document_crud_service.py  document_service.py  embedding_service.py  gemini_client.py  gemini_live_client.py
backend/experiments/: gemini_live_poc.py  requirements-experiments.txt  test_summarize_prompt.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_conversations.py  test_documents.py
docs/: agent-workflow.md  sprint3-audit-report.md  stitch-batch1-prompt.md  stitch-batch2-prompt.md  stitch-design-prompt.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
scripts/hooks/: on-task-completed.sh  (+1 more)
(+34 files in other folders)
