[project]
name = "voice-map-backend"
version = "0.1.0"
description = "Voice Map Backend API"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# 프롬프트 파일은 긴 한국어 문장이 포함된 문자열 상수를 보유하므로 E501 제외
"app/prompts/*.py" = ["E501"]
# 실험 스크립트는 샘플 대화 문자열의 긴 한국어 라인 허용
"experiments/*.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
